# benefits360

./: .gitignore  README.md  components.json  databricks.yml  orval.config.ts  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.cursor/: mcp.json
.cursor/rules/: project.mdc
src/benefits360/backend/: app.py  config.py  dependencies.py  models.py  router.py  runtime.py
src/benefits360/ui/: index.html
src/benefits360/ui/components/apx/: Logo.tsx  Navbar.tsx  sidebar-layout.tsx
src/benefits360/ui/components/backgrounds/: bubble.tsx
src/benefits360/ui/lib/: api.schemas.ts  api.ts  axios-instance.ts  selector.ts
src/benefits360/ui/lib/default/: default.ts
src/benefits360/ui/routes/: __root.tsx  index.tsx
src/benefits360/ui/routes/_sidebar/: profile.tsx  route.tsx
src/benefits360/ui/types/: routeTree.gen.ts
