[project]
name = "benefits360"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.37.0",
    "databricks-sdk>=0.68.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
]

[tool.apx.metadata]
app-name = "benefits360"
app-slug = "benefits360"
app-module = "benefits360.backend.app:app"
metadata-path = "src/benefits360/_metadata.py"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
format-jinja = "{{version}}"

[tool.hatch.build.hooks.version]
path = "src/benefits360/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build]
artifacts = ["src/benefits360/__dist__"]
exclude = ["src/benefits360/ui"]